# flare

./: .gitignore  README.md  docker-compose.yml  strfry.conf
backend/: .dockerignore  .env.example  Dockerfile  config.py  pyproject.toml
backend/lib/loggers/: __init__.py  main.py
backend/src/: database.py  main.py
backend/src/admin/: __init__.py  auth.py  models.py  router.py  seed.py
backend/src/data/: keypairs.json
backend/src/events/: __init__.py  router.py  utils.py
backend/src/nostr/: __init__.py  keypairs.py  nostr.py
backend/src/volunteers/: __init__.py  database.py  models.py  repository.py  router.py  seed.py  signatures.py  trust.py
extension/: build.js  manifest.json  package-lock.json  package.json  popup.html  tsconfig.json
extension/src/: background.ts  content.ts  injected.ts  patcher.ts  popup.ts  types.ts
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/lib/: api.ts  nostr.ts
frontend/src/lib/components/: QueueTab.svelte  RegistrationForm.svelte  VolunteerDashboard.svelte  VolunteersTab.svelte
frontend/src/routes/: +page.svelte
scripts/: relay_policy.py
