[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "nostr-sdk>=0.10.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.0",
    "secp256k1>=0.14.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
    "ty>=0.0.39",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
