[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "nostr-sdk>=0.10.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
    "ty>=0.0.39",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E402"]
